<resources>

    <string name="app_name">BattleGame</string>
    <string name="hello">Please enter the network settings for the opponent you want to connect to.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_text">Connect</string>
    <string name="host_title">Host Game</string>
    <string name="port">Port</string>
    <string name="on">ON</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="host_button">Host Game</string>
    <string name="ip_address">IP Address</string>
    <string name="back">Back</string>
    <string name="title_host_main">HostActivity</string>
    <string name="title_host_activity">HostActivity</string>
    <string name="game_title">Mythical Creature Battle Game</string>
    <string name="start_button">Start</string>
    <string name="friend_button">Friends</string>
    <string name="high_score_button">High Scores</string>
    <string name="character_select_title">Choose a Character</string>
    <string name="unicorn_name">Unicorn</string>
    <string name="wyvern_name">Wyvern</string>
    <string name="send_button">Send</string>
    <string name="default_port">6666</string>

</resources>