<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

<TextView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/hello"
    android:id="@+id/myTextView"
/>

<EditText
    android:id="@+id/ipAddress"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/ip_address" >

    <requestFocus />
</EditText>

<EditText
    android:id="@+id/port"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/port"
    android:inputType="number" />

<Button
    android:id="@+id/sendButton"
    android:layout_width="80dp"
    android:layout_height="42dp"
    android:layout_gravity="center_horizontal"
    android:text="@string/button_text" />

<Button
    android:id="@+id/hostButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:text="@string/host_button" />

</LinearLayout>